--- a/docs/Procedures-and-Guidelines.tex
+++ b/docs/Procedures-and-Guidelines.tex
@@ -79,7 +79,7 @@
 
 \title{Procedures and Guidelines}
 \author{Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar}
-\date{2022-06-13}
+\date{2022-06-14}
 
 \begin{document}
 \maketitle
@@ -165,7 +165,7 @@ This book is divided into 4 sections.
 \hypertarget{file-and-data-management}{%
 \chapter{File and Data Management}\label{file-and-data-management}}
 
-\emph{Last updated 2022-06-13}
+\emph{Last updated 2022-06-14}
 
 Well-organized data is critical to transparency, reproducibility, and generally maintaining one's sanity when conducting research. When we talk about file and data management, we may be referring to one of many aspects of making our data understandable to others, to a computer, or to our future selves that have succumb to memory lapses. Making data comprehensible is really about well-structured and communicated metadata that is, whenever possible, implemented according to conventions or standards.
 
@@ -188,7 +188,7 @@ Organizing and formatting data is a discussion about the best way to sort and pa
 \hypertarget{file-naming}{%
 \chapter{File Naming}\label{file-naming}}
 
-\emph{Last updated 2022-06-13}
+\emph{Last updated 2022-06-14}
 
 File naming isn't exactly fun, but it is crucial for organizing, describing, and managing all kinds of work, especially research. So, let's talk about the file naming conventions that you will be expected to use while at UBCO.
 
@@ -482,7 +482,7 @@ Pither_BIOL116RProject_Lab-report_V3.docx
 \hypertarget{directories}{%
 \chapter{Directories}\label{directories}}
 
-\emph{Last updated 2022-06-13}
+\emph{Last updated 2022-06-14}
 
 Directories are just folders; we'll use the terms interchangeably. All of the files on your computer are organized around folders. In some respects, this means that your computer is synonymous with a filing cabinet; you open it up and there are a bunch of folders holding files and sub-folders. Following this analogy, if you were to open your computer--and you were on a Mac--you'd see 16 folders, including the following:
 
@@ -538,7 +538,6 @@ When you open your \texttt{Research\_Project/} folder, we call this your working
 This has implications for how the applications that you work with access the files on your computer. If you opened your file \texttt{biol-125\_research-project\_notes.docx}, \texttt{Research-Project} would not only be your working directory, it would be Microsoft Word's working directory for that file. With \texttt{biol-125\_research-project\_notes.docx} open, if you went to \texttt{File\ \textgreater{}\ Open...} in Word, it would prompt you to open a file in the directory \texttt{Research-Project}, because this is where the application is looking for working files.
 
 Generally, in day to day life, we don't need to worry about things like working directories. When we conduct research though, and we use tools like \texttt{R}, working directories--and knowing where directories and files are in relation to the directory that you are currently in--have significant implications for how things work and for computational reproducibility.
-
 In the next section, we'll look at common directory structures used to organize research. For the moment, we'll assume that you have a research project and that associated with that research project you have data and that you're analyzing that data, and that you're using two different folders to hold the files associated with these activities. So a map something like the following:
 
 \begin{verbatim}
@@ -650,7 +649,7 @@ You may have heard of other methods that can be used to set a working directory 
 \hypertarget{directory-structures}{%
 \chapter{Directory Structures}\label{directory-structures}}
 
-\emph{Last updated 2022-06-13}
+\emph{Last updated 2022-06-14}
 
 Now that we've covered naming conventions and have a sense of how our systems are organized around folder structures, let's pretend that you store everything on your computer in a single folder--some of us are probably known to use our desktops for this. Imagine how long it would take you to find data you collected on a specific day a few years ago. Instead of keeping every document in a single place, we often organize our files using directory or folder structures. This helps us save precious time and improve our productivity.
 
@@ -746,7 +745,7 @@ Learn the basic syntax of markdown \href{https://ubco-biology.github.io/Procedur
 \hypertarget{root-folder-readme}{%
 \section{Root folder readme}\label{root-folder-readme}}
 
-To create a root folder readme file, use any markdown or text editor (e.g.~Typora, notepad etc.), open a new file and save it to the root folder for your project, ensuring the file type is .md.
+To create a root folder readme file, use any markdown or text editor (e.g.~VS Code, Typora, notepad etc.), open a new file and save it to the root folder for your project, ensuring the file type is .md.
 
 Name your readme file \_README.md.
 
@@ -771,7 +770,7 @@ To see an example root directory readme file click \href{files/DS_rootREADME.md}
 \hypertarget{data-directory-readme}{%
 \section{Data directory readme}\label{data-directory-readme}}
 
-Next, we want to create another readme file, but this file will be placed within the subfolder that contains our project's data. To do this, open any markdown or text editor (e.g.~Typora, notepad etc.), open a new file and save it to the data subfolder for your project, ensuring the file type is .md. Name your readme file \_README.md.
+Next, we want to create another readme file, but this file will be placed within the subfolder that contains our project's data. To do this, open any markdown or text editor (e.g.~VS Code, Typora, notepad etc.), open a new file and save it to the data subfolder for your project, ensuring the file type is .md. Name your readme file \_README.md.
 
 The purpose of this readme file is to provide a description of data collection methods. We will include:
 
@@ -794,7 +793,7 @@ To see an example data directory readme file click \href{files/DS_dataREADME.md}
 \hypertarget{data-dictionary}{%
 \section{Data dictionary}\label{data-dictionary}}
 
-Lastly, we need to create a data dictionary which elaborates on how our data is stored and organized. To do this, open any markdown or text editor (e.g.~Typora, notepad etc.), open a new file and save it to the data subfolder for your project. This time we will save the file as \_DATA-DICTIONARY.md.
+Lastly, we need to create a data dictionary which elaborates on how our data is stored and organized. To do this, open any markdown or text editor (e.g.~VS Code, Typora, notepad etc.), open a new file and save it to the data subfolder for your project. This time we will save the file as \_DATA-DICTIONARY.md.
 
 A data dictionary helps others understand the meaning of each element in your datasets within the broader context of the project. Typically you will have an individual readme file for each dataset. This file should include:
 
@@ -1050,7 +1049,7 @@ We can start to see that if you were to share your entire project directory with
 \hypertarget{tidy-data}{%
 \chapter{Tidy data}\label{tidy-data}}
 
-\emph{Last updated 2022-06-13}
+\emph{Last updated 2022-06-14}
 
 We've talked about file naming, directory structures, and documentation to ensure accessible, interpretable, and transparent data. Now it's time to talk about organizing individual variables within a given file. When properly organized, data values can be effectively analyzed, summarized, and visualized. When not, they can be onerous to work with and risk misinterpretation.
 
@@ -1270,7 +1269,7 @@ Ellison-lake & 3 & 1 \\
 \hypertarget{figures-tables}{%
 \chapter{Figures \& Tables}\label{figures-tables}}
 
-\emph{Last updated 2022-06-13}
+\emph{Last updated 2022-06-14}
 
 These guidelines are based on current "best practices" in Biology. You may encounter small differences when working with data or reading the results of research from other disciplines. Our aim is to achieve consistency among faculty, instructors, and students in how data are summarized and presented within lab reports and research papers.
 
@@ -1401,13 +1400,13 @@ Here are some guidelines for reporting the results of statistical tests:
 \item
   Your \emph{Methods} section should clearly state the significance level (\(\alpha\)), and this should be decided prior to the study
 \item
-  Test statistics (e.g.~Student's \texttt{t} or an \texttt{F} from ANOVA) should be rounded to 2 decimal places, and associated \texttt{P-values} should report 3 decimal places, or if smaller than 0.001, then \textless0.001. \texttt{P-values} do not indicate effect size, so reporting \(P = 10^{-6}\) is not more impressive than \emph{P} \textless0.001
+  Test statistics (e.g.~Student's \texttt{t} or an \texttt{F} from ANOVA) should be rounded to 2 decimal places, and associated \texttt{P-values} should report 3 decimal places, or if smaller than 0.001, then \textless0.001. \texttt{P-values} do not indicate `effect size, so reporting \(P = 10^{-6}\) is not more impressive than \emph{P} \textless0.001
 \item
-  Concluding statements should, in the absence of a table, include the test, test statistic value, degrees of freedom \texttt{df} or sample sizes, \texttt{P-value}, and confidence interval (if appropriate) in parentheses.
+  Concluding statements should, in the absence of a table, include the test, test statistic value, degrees of freedom \texttt{df} or sample sizes, \texttt{P-value}, and `confidence interval (if appropriate) in parentheses.
 \item
   For example: "On average, hair loss was significantly greater among fathers compared to childless men (Welch's 2-sample \emph{t}-test; \emph{t} = 4.23; \emph{n} F = 18, \emph{n} C = 20; \emph{P} = 0.018; 95\% CI for difference: 9.34 -- 18.22\%)."\\
 \item
-  Regression and ANOVA results should be shown in a standard ANOVA table format.
+  \texttt{Regression\ and\ \textless{}a\ href="https://ubco-biology.github.io/Procedures-and-Guidelines/glossary\#Analysis-of-variance"\textgreater{}}ANOVA results should be shown in a standard ANOVA table format.
 \end{itemize}
 
 \textbf{Example of ANOVA table format}
@@ -1485,7 +1484,7 @@ When displaying data using a figure, follow these guidelines:
 \hypertarget{sketches-drawings}{%
 \chapter{Sketches \& Drawings}\label{sketches-drawings}}
 
-\emph{Last updated 2022-06-13}
+\emph{Last updated 2022-06-14}
 
 We've heard it before, a picture is worth a thousand words. While a common place phrase, it echoes very true in biological research. Describing in text the morphological features of an organism is no easy task. Trying to form a mental image of an organism described in text still more difficult! As a simple example, imagine trying to draw a representation of \emph{Fritillaria pudica} from the botanical description in the \href{http://www.efloras.org/florataxon.aspx?flora_id=1\&taxon_id=242101628}{Flora of North America}. No easy task. So let's talk about sketches\ldots{}
 
@@ -1631,7 +1630,7 @@ This figure is not directed to have the anterior region at the top, the labellin
 \hypertarget{markdown-1}{%
 \chapter{Markdown}\label{markdown-1}}
 
-\emph{Last updated 2022-06-13}
+\emph{Last updated 2022-06-14}
 
 Markdown is a markup language used to format plain text files to help us provide additional meaning to our content. Markup languages are ideal authoring tools because they work on the principle of separating content from formatting. Markup languages are ideal authoring tools for the sciences because they rely on plain text, so any computer anywhere at any time will be able to open them and consequently, we will be able to read them.
 
@@ -1675,7 +1674,7 @@ TextEdit on your mac is not actually a plain text editor; while TextEdit can rea
 
 A dedicated Markdown editor will format your Markdown as you type, so you get an idea as to how it will render if you were to save it as a pdf, html etc. There are a lot of Markdown editors available, many of them free and open source, and many for very specific use cases. When you have some free time, you may choose to check out the following comprehensive list \url{https://www.markdownguide.org/tools/}.
 
-In between a plain text editor and a dedicated Markdown editor are those text editors with add-ons to help you navigate your markup. These options provide a lot of flexibility and finding a text editor of this ilk that you like will be of benefit going forward in your degree. An excellent free and open source, cross platform option is \href{https://atom.io/}{Atom}, which has built in support for Markdown rendering.
+In between a plain text editor and a dedicated Markdown editor are those text editors with add-ons to help you navigate your markup. These options provide a lot of flexibility and finding a text editor of this ilk that you like will be of benefit going forward in your degree. An excellent free and open source, cross platform option is \href{https://code.visualstudio.com/}{VS Code}, which has built in support for Markdown rendering.
 
 \hypertarget{atom}{%
 \subsection*{Atom}\label{atom}}
@@ -2011,7 +2010,7 @@ We'll keep it simple for the moment; this is all you really need for your \_READ
 \hypertarget{apa-citations}{%
 \chapter{APA Citations}\label{apa-citations}}
 
-\emph{Last updated 2022-06-13}
+\emph{Last updated 2022-06-14}
 
 This chapter is a brief overview of the 7th edition of APA. For a more in depth review, please consult \href{https://guides.library.ubc.ca/apacitationstyle}{the library's APA Citation Guide}. For the full APA manual, please consult the \href{http://resolve.library.ubc.ca/cgi-bin/catsearch?bid=10057275}{Publication Manual of the American Psychological Association}, available through the library.
 
@@ -2111,7 +2110,7 @@ Mei, Y., Yu, K., Lo, J. C. Y., Takeuchi, L. E., Hadjesfandiari, N., Yazdani-Ahma
 \hypertarget{reference-management-zotero}{%
 \chapter{Reference Management: Zotero}\label{reference-management-zotero}}
 
-\emph{Last updated 2022-06-13}
+\emph{Last updated 2022-06-14}
 
 Imperative to managing our education and research is managing our readings and references. We can do this manually or we can take advantage of a tool - citation management software - specifically designed to keep your references organized, shareable, and easily citable.
 
@@ -2237,7 +2236,7 @@ You'll see your recently synced citation and associated attachments.
 \hypertarget{academic-integrity}{%
 \chapter{Academic Integrity}\label{academic-integrity}}
 
-\emph{Last updated 2022-06-13}
+\emph{Last updated 2022-06-14}
 
 Academic integrity is the act of performing honest, responsible scholarship, much like scientific integrity is honest, responsible science. Academic integrity is very much about how we conduct ourselves in the pursuit of our studies, respecting those we learn from and work with and the contributions they make to our scholarly and scientific endeavours.
 
@@ -2246,7 +2245,7 @@ Learn more about academic integrity from the \href{https://students.ok.ubc.ca/ac
 \hypertarget{copyright-1}{%
 \chapter{Copyright}\label{copyright-1}}
 
-\emph{Last updated 2022-06-13}
+\emph{Last updated 2022-06-14}
 
 Copyright is the legal ownership of a work, like a book, image, graph, journal article. Copyright law governs how and when we are allowed to redistribute what someone else has produced and how others can redistribute what we've produced.
 
@@ -2255,7 +2254,7 @@ Learn more about copyright at UBC from the \href{https://copyright.ubc.ca/}{UBC 
 \hypertarget{glossary}{%
 \chapter{Glossary}\label{glossary}}
 
-\emph{Last updated 2022-06-13}
+\emph{Last updated 2022-06-14}
 
 \textbf{A priori hypothesis:} Hypothesis that is generated before the research study takes place. Presenting the hypothesis before the study takes place helps in avoiding replacing the hypothesis later with one that fits the data better aka hypothesizing after the fact (HARKing).
 
